--- a/index.html
+++ b/index.html
@@ -254,47 +254,47 @@
             </div>
     </section>
     <section class="customer">
-      <div class="container">
+      <div class="container customer_div">
         <h2 class="customer_title">Customers</h2>
         <ul class="custom_ul">
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_1"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_2"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_3"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_4"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_5"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg" width="16px"
-                                height="16px">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="16"
+                                height="16">
                 <use href="./images/icons.svg#Customers_6"></use>
               </svg>
             </a>
