--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
       </div>
     </div>
   </footer>
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is_hidden" data-modal>
   <div class="modal">
-    <button type="button" class="modal-btn" data-modal-close>
-      <svg class="modal-icon" width="8" height="8">
+    <button type="button" class="modal_btn" data-modal-close>
+      <svg class="modal_icon" width="8" height="8">
         <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
       </svg>
     </button>
