--- a/index.html
+++ b/index.html
@@ -258,43 +258,37 @@
         <h2 class="customer_title">Customers</h2>
         <ul class="custom_ul">
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_1"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" wwidth="104" height="56">
                 <use href="./images/icons.svg#Customers_2"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_3"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_4"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg"width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" wwidth="104" height="56">
                 <use href="./images/icons.svg#Customers_5"></use>
               </svg>
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg" width="16"
-                                height="16">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_6"></use>
               </svg>
             </a>
@@ -344,15 +338,15 @@
       </div>
     </div>
   </footer>
-<div class="backdrop is_hidden" data-modal>
-  <div class="modal">
-    <button type="button" class="modal_btn" data-modal-close>
-      <svg class="modal_icon" width="8" height="8">
-        <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-      </svg>
-    </button>
+  <div class="backdrop is_hidden" data-modal>
+    <div class="modal">
+      <button type="button" class="modal_btn" data-modal-close>
+        <svg class="modal_icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+      </button>
+    </div>
   </div>
-</div>
   <script src="./js/modal.js"></script>
 </body>
 
