--- a/index.html
+++ b/index.html
@@ -143,80 +143,80 @@
               <p class="our_list_job">Product Designer</p>
               <ul class="network">
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#instagram"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#instagram" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#twitter"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#twitter" width=></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#facebook"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#facebook" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#linkedin"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" ></use>
                     </svg></a>
                 </li>
               </ul>
             </div>
           </li>
           <li class="our_list_item">
-            <img src="./images/Tom_Ford.jpg" alt="Tom Ford" width="16" height="16" />
+            <img src="./images/Tom_Ford.jpg" alt="Tom Ford"  />
             <div class="our_description">
               <h3 class="our_list_name">Tom Ford</h3>
               <p class="our_list_job">Frontend Developer</p>
               <ul class="network">
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#instagram"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#instagram" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#twitter"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#twitter" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#facebook"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#facebook" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#linkedin"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin" ></use>
                     </svg></a>
                 </li>
               </ul>
             </div>
           </li>
           <li class="our_list_item">
-            <img src="./images/Camila_Garcia.jpg" alt="Camila_Garcia" width="16" height="16" />
+            <img src="./images/Camila_Garcia.jpg" alt="Camila_Garcia" />
             <div class="our_description">
               <h3 class="our_list_name">Camila Garcia</h3>
               <p class="our_list_job">Marketing</p>
               <ul class="network">
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#twitter"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#twitter" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
-                      <use href="./images/icons.svg#facebook"></use>
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
+                      <use href="./images/icons.svg#facebook" ></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg></a>
                 </li>
@@ -225,28 +225,28 @@
             </div>
           </li>
           <li class="our_list_item">
-            <img src="./images/Daniel_Wilson.jpg" alt="Daniel_Wilson" width="16" height="16" />
+            <img src="./images/Daniel_Wilson.jpg" alt="Daniel_Wilson"  />
             <div class="our_description">
               <h3 class="our_list_name">Daniel Wilson</h3>
               <p class="our_list_job">UI Designer</p>
               <ul class="network">
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
-                  <a href="" class="network_a link"><svg class="network_svg">
+                  <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg></a>
                 </li>
@@ -264,7 +264,7 @@
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg" wwidth="104" height="56">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_2"></use>
               </svg>
             </a>
