--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="hero">
       <div class="container hero_container">
         <h1 class="hero_title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero_btn">Order Service</button>
+        <button type="button" class="hero_btn" data-modal-open>Order Service</button>
       </div>
     </section>
     <!-- Секція 1 -->
