--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
     <!-- Секція 3 -->
     <section class="our">
-      <div class="container our_container">
+      <div class="our_container container">
         <h2 class="our_title">Our Team</h2>
         <ul class="our_list list">
           <li class="our_list_item">
