width: calc((100% - 120px) / 6);

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </a>
           </li>
           <li class="custom_list list">
-            <a href="" class="custom_a link"><svg class="custom_svg" wwidth="104" height="56">
+            <a href="" class="custom_a link"><svg class="custom_svg" width="104" height="56">
                 <use href="./images/icons.svg#Customers_5"></use>
               </svg>
             </a>
