--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       </div>
     </div>
   </footer>
-  <div class="backdrop is_hidden" data-modal>
+  <div class="is_hidden backdrop" data-modal>
     <div class="modal">
       <button type="button" class="modal_btn" data-modal-close>
         <svg class="modal_icon" width="8" height="8">
@@ -347,7 +347,7 @@
       </button>
     </div>
   </div>
-  
+
   <script src="./js/modal.js"></script>
 </body>
 
