--- a/portfolio.html
+++ b/portfolio.html
@@ -77,13 +77,13 @@
 
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Banking_App_Interface_Concept.jpg" alt="Banking App Interface Concept" width="360"
+              <div class="porto_image"><img src="./images/Banking_App_Interface_Concept.jpg" alt="Banking App Interface Concept" width="360"
                 height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">
                   Banking App Interface Concept
@@ -94,12 +94,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Cashless_Payment.jpg" alt="Cashless Payment" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Cashless_Payment.jpg" alt="Cashless Payment" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Cashless Payment</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -108,12 +108,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Meditation_App.jpg" alt="Meditation App" width="360" height="300" />
+            <div class="porto_image"> <img src="./images/Meditation_App.jpg" alt="Meditation App" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Meditation App</h2>
                 <p class="porto_item_text">App</p>
@@ -125,12 +125,12 @@
 
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Taxi_Service.jpg" alt="Taxi Service" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Taxi_Service.jpg" alt="Taxi Service" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Taxi Service</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -139,12 +139,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Screen_Illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Screen_Illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Screen Illustrations</h2>
                 <p class="porto_item_text">Design</p>
@@ -153,12 +153,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <img src="./images/Online_Courses.jpg" alt="Online Courses" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Online_Courses.jpg" alt="Online Courses" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Online Courses</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -170,13 +170,13 @@
 
           <li class="porto_item">
             <a href="" class="linkes link">
-              <img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram Stories Concept" width="360"
+              <div class="porto_image"><img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram Stories Concept" width="360"
                 height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Instagram Stories Concept</h2>
                 <p class="porto_item_text">Design</p>
@@ -185,12 +185,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="linkes link">
-              <img src="./images/Organic_Food.jpg" alt="Organic Food" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Organic_Food.jpg" alt="Organic Food" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Organic Food</h2>
                 <p class="porto_item_text">Web Site</p>
@@ -199,12 +199,12 @@
           </li>
           <li class="porto_item">
             <a href="" class="linkes link">
-              <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
+              <div class="porto_image"><img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
               <p class="porto-box-overlay">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                 App · Cloud Storage App
-              </p>
+              </p></div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Fresh Coffee</h2>
                 <p class="porto_item_text">Web Site</p>
