--- a/portfolio.html
+++ b/portfolio.html
@@ -229,25 +229,25 @@
         <p class="logos-social">Social media</p>
         <ul class="logos_ul">
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg">
+            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24" >
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg">
+            <a href="" class="logos_a link"><svg class="logos_svg"width="24" height="24">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg">
+            <a href="" class="logos_a link"><svg class="logos_svg"width="24" height="24">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg">
+            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
