--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <div class="modal">
       <button type="button" class="modal_btn" data-modal-close>
         <svg class="modal_icon" width="8" height="8">
-          <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          <use href="./images/icons.svg#close"></use>
         </svg>
       </button>
     </div>
