--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   <!-- кінець -->
   <footer class="logos">
     <div class="logos_div container">
-      <div class="container logos_grap">
+      <div class="logos_grap">
         <a href="./index.html" class="logom link">Web<span class="logo_change_link">Studio</span></a>
         <p class="logo_link_text">
           Increase the flow of customers and sales for your business with
