--- a/portfolio.html
+++ b/portfolio.html
@@ -218,7 +218,7 @@
   <!-- кінець -->
   <footer class="logos">
     <div class="logos_div container">
-      <div class="logos_div">
+      <div class="logos_grap">
         <a href="./index.html" class="logom link">Web<span class="logo_change_link">Studio</span></a>
         <p class="logo_link_text">
           Increase the flow of customers and sales for your business with
@@ -229,19 +229,19 @@
         <p class="logos-social">Social media</p>
         <ul class="logos_ul">
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24" >
+            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg"width="24" height="24">
+            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="logos_li list">
-            <a href="" class="logos_a link"><svg class="logos_svg"width="24" height="24">
+            <a href="" class="logos_a link"><svg class="logos_svg" width="24" height="24">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
