--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </li>
                 <li class="network_li list">
                   <a href="" class="network_a link"><svg class="network_svg" width="16" height="16">
-                      <use href="./images/icons.svg#twitter" width=></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg></a>
                 </li>
                 <li class="network_li list">
@@ -252,7 +252,7 @@
                 </li>
               </ul>
             </div>
-    </section>
+     </section>
     <section class="customer">
       <div class="container customer_div">
         <h2 class="customer_title">Customers</h2>
