--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
     </section>
     <!-- Секція 3 -->
     <section class="our">
-      <div class="our_container container">
+      <div class="container our_container">
         <h2 class="our_title">Our Team</h2>
-        <ul class="our_list list">
+        <ul class="list our_list">
           <li class="our_list_item">
             <img src="./images/Mark_Guerrero.jpg" alt="Mark_Guerrero" width="264" height="260" />
             <div class="our_description">
@@ -252,7 +252,7 @@
                 </li>
               </ul>
             </div>
-     </section>
+    </section>
     <section class="customer">
       <div class="container customer_div">
         <h2 class="customer_title">Customers</h2>
