--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
                 </li>
               </ul>
             </div>
+</ul>
+</div>
     </section>
     <section class="customer">
       <div class="container customer_div">
