--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
   </header>
   <main>
     <section class="main_menu">
-      <div class="container maines">
+      <div class="container ">
         <h1 class="visually_hidden">Menu</h1>
         <ul class="menu_list list">
           <li class="button_item">
