--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
                 </li>
               </ul>
             </div>
-</ul>
-</div>
+        </ul>
+      </div>
     </section>
     <section class="customer">
-      <div class="container customer_div">
+      <div class="container">
         <h2 class="customer_title">Customers</h2>
         <ul class="custom_ul">
           <li class="custom_list list">
