--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       </div>
     </section>
     <section class="customer">
-      <div class="container">
+      <div class="container customer_div ">
         <h2 class="customer_title">Customers</h2>
         <ul class="custom_ul">
           <li class="custom_list list">
